--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Richard</title>
+    <link rel="stylesheet" href="css/owl.carousel.css">
+    <link rel="stylesheet" href="css/owl.theme.default.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Gothic+A1&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
 
 
@@ -30,7 +35,7 @@
                 Launch your product — and savor the momentum.
             </p>
             <form action="#" target="_blank">
-            <button> Get the App</button>
+            <button class="button1"> Get the App</button>
             </form>
             <img  class="arrow" src="images/arrow.svg" alt="arrow">
         </div>
@@ -182,7 +187,7 @@
                     Parturient Tortor
                 </p>
                 <p class="food_text3">
-                    Nulla vitae elit libero, a pharetra augue. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis consectetur purus sit amet fermentum. Donec id elit non mi porta gravida at eget metus. Etiam porta sem malesuada magna mollis euismod.
+                    Nulla vitae elit libero, a pharetra augue. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. <b><u>Cras mattis consectetur</u></b> purus sit amet fermentum. Donec id elit non mi porta gravida at eget metus. Etiam porta sem malesuada magna mollis euismod.
                 </p>
             </div>
         </div>
@@ -190,7 +195,8 @@
     </div>
 </div>
 <div class="fifth_page">
-    <div class="fp_slide">
+    <div class="owl-carousel">
+        <div class="fp_slide">
         <div class="fp_text">
             <p>
                 HeadNulla vitae elit libero, a pharetra augue. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Pus sit amet fermentum. Donec id elit non mi porta gravida at eget metus. Etiam porta sem malesuada magna mollis euismod.ing
@@ -200,14 +206,81 @@
             <p>
                 Joshua Home
             </p>
-            <img src="images/strip.svg" alt="strip" class="pl-20">
+            <img src="images/strip.svg" alt="strip" class="strip">
             <p class="pl-20">
                 New York Times
             </p>
         </div>
+    </div>
+        <div class="fp_slide">
+            <div class="fp_text">
+                <p>
+                    HeadNulla vitae elit libero, a pharetra augue. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec.
+                    HeadNulla vitae elit libero, a pharetra augue. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec
+                </p>
+            </div>
+            <div class="text_strip">
+                <p>
+                    Andrue McDonalds
+                </p>
+                <img src="images/strip.svg" alt="strip" class="strip">
+                <p class="pl-20">
+                    Gazeta Fakty
+                </p>
+            </div>
+    </div>
+    </div>
         <img src="images/brands.svg" alt="brands" class="brands">
+        <img class="iphones" src="images/iphones.svg" alt="iphones">
+    </div>
+<div class="six_page">
+    <img class="bg_2" src="images/bg_2.svg" alt="bg_2">
+    <div class="sixp_main">
+        <p class="sixp_text">Ready to get started?</p>
+        <div class="buttons">
+            <form action="#" target="_blank">
+                <button class="button2"> Download Now</button>
+            </form>
+            <form action="#" target="_blank">
+                <button class="button3">Get in Touch</button>
+            </form>
+
+        </div>
     </div>
 </div>
+<div class="seven_page">
+    <div class="sevp_content">
+        <p class="sevp_text">
+            Get updates from Richard
+        </p>
+        <p class="sevp_text2">
+            New course alerts, discounts and free lessons
+        </p>
+    </div>
+        <form class="mail" action="#" method="get">
 
+            <input type="email" placeholder='Enter your email' name="user_email" class="mail_input" />
+            <input class="mail_submit" type="submit" value="Subscribe" />
+        </form>
+    <footer>
+        <a href="#"><img src="images/r.svg" class="r"></a>
+
+        <div class="about">
+            <a href="#" class="about_items">Email</a>
+            <a href="#" class="about_items">Instagram</a>
+            <a href="#" class="about_items">Facebook</a>
+            <a href="#" class="about_items">Twitter</a>
+            <a href="#" class="about_items">Image License Info</a>
+            <a href="#" class="about_items">Powered by Webflow</a>
+        </div>
+    </footer>
+</div>
+
+<script
+        src="https://code.jquery.com/jquery-3.6.0.min.js"
+        integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
+        crossorigin="anonymous"></script>
+<script src="js/owl.carousel.js"></script>
+<script src="js/script.js"></script>
 </body>
 </html>
