complete_with_adaptive

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Gothic+A1&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/media.css">
 
 
 </head>
@@ -68,7 +69,7 @@
         </div>
         <img class="iphone1" src="images/iphone1.svg" alt="iphone1">
     </div>
-    <div class="thp_1">
+    <div class="thp_2">
         <img class="iphone1" src="images/iphone2.svg" alt="iphone2">
         <div class="thp_text">
             <p class="thp_text1">
