complete_with_adaptive3

--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
         <img class="iphones" src="images/iphones.svg" alt="iphones">
     </div>
 <div class="six_page">
-    <img class="bg_2" src="images/bg_2.svg" alt="bg_2">
+    <div class="bg_2">
     <div class="sixp_main">
         <p class="sixp_text">Ready to get started?</p>
         <div class="buttons">
@@ -247,6 +247,7 @@
             </form>
 
         </div>
+    </div>
     </div>
 </div>
 <div class="seven_page">
