--- a/index.html
+++ b/index.html
@@ -17,16 +17,56 @@
 
 </head>
 <body>
+
 <div class="first_page">
-    <header>
-        <a href="#"><img class="logo" src="images/logo.svg" alt="logo"></a>
+
+
+
+    <header class="cd-header">
         <div class="menu">
-            <a href="#" class="menu_items">About</a>
-            <a href="#" class="menu_items">Features</a>
-            <a href="#" class="menu_items">How to Use</a>
-            <a href="#" class="menu_items">Download</a>
+            <div class="logo-wrap">
+                <a href="#"><img class="logo" src="images/logo.svg" alt="logo"></a>
+            </div>
+            <div class="nav-but-wrap">
+                <div class="menu-icon hover-target">
+                    <span class="menu-icon__line menu-icon__line-left"></span>
+                    <span class="menu-icon__line"></span>
+                    <span class="menu-icon__line menu-icon__line-right"></span>
+                </div>
+            </div>
         </div>
+        <div class="nav">
+            <div class="nav__content">
+                <ul class="nav__list">
+                    <li class="nav__list-item active-nav"><a href="#" class="hover-target">home</a></li>
+                    <li class="nav__list-item"><a href="#" class="hover-target">studio</a></li>
+                    <li class="nav__list-item"><a href="#" class="hover-target">news</a></li>
+                    <li class="nav__list-item"><a href="#" class="hover-target">contact</a></li>
+                </ul>
+            </div>
+        </div>
+
+
+
+        <!--<div class='cursor' id="cursor"></div>-->
+        <div class='cursor2' id="cursor2"></div>
+        <div class='cursor3' id="cursor3"></div>
+
+
+
     </header>
+
+
+
+<!--    <header>-->
+<!--        <a href="#"><img class="logo" src="images/logo.svg" alt="logo"></a>-->
+<!--        <div class="menu">-->
+<!--            <a href="#" class="menu_items">About</a>-->
+<!--            <a href="#" class="menu_items">Features</a>-->
+<!--            <a href="#" class="menu_items">How to Use</a>-->
+<!--            <a href="#" class="menu_items">Download</a>-->
+<!--        </div>-->
+<!--    </header>-->
     <div class="main_fp">
         <div class="main_text">
             <p class="main_text1">
